tests/neg-custom-args/fatal-warnings/i14705.scala
val n = Nil
val b = n.head.isInstanceOf[String] // error

